--- a/composer.json
+++ b/composer.json
@@ -5,12 +5,15 @@
     "keywords": ["framework", "laravel"],
     "license": "MIT",
     "require": {
-        "php": "^7.3|^8.0",
+        "php": "^7.3|^8.1",
         "amrshawky/laravel-currency": "^5.0",
         "barryvdh/laravel-dompdf": "^0.9.0",
+        "doctrine/dbal": "~2.3",
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
+        "infyomlabs/adminlte-templates": "^3.0",
+        "infyomlabs/laravel-generator": "^3.0",
         "laravel/framework": "^8.12",
         "laravel/jetstream": "^2.3",
         "laravel/passport": "^10.1",
@@ -24,7 +27,7 @@
         "spatie/laravel-permission": "^4.0",
         "stevebauman/location": "^6.5",
         "werk365/identitydocuments": "^2.0",
-        "yajra/laravel-datatables-oracle": "^9.0"
+        "yajra/laravel-datatables-oracle": "^9.21"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
